[gd_scene load_steps=11 format=2]

[ext_resource path="res://Entities/Enemies/Eye/Eye.gd" type="Script" id=1]
[ext_resource path="res://Entities/Enemies/Eye/Eye.png" type="Texture" id=2]
[ext_resource path="res://Entities/Enemies/BasicEnemyShader.tres" type="Material" id=3]
[ext_resource path="res://Entities/Enemies/Eye/PlayerAngleHelper.gd" type="Script" id=4]
[ext_resource path="res://Entities/PlayerDetector.gd" type="Script" id=5]

[sub_resource type="Animation" id=2]
resource_name = "Attack"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 6, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/time_remaining")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 2.0, 4.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:material:shader_param/invincible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.2, 0.25, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.65, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_bullet"
}, {
"args": [  ],
"method": "return_to_idle"
} ]
}

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "cycle"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -45.0, 0.0, 45.0, -45.0 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 122.037

[sub_resource type="CircleShape2D" id=5]

[node name="Eye" type="KinematicBody2D"]
script = ExtResource( 1 )
health = 2
gold_max = 15
gold_min = 5
spawn_gold = true

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 3 )
texture = ExtResource( 2 )
hframes = 2
vframes = 4
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack = SubResource( 2 )
anims/Idle = SubResource( 1 )

[node name="PlayerAngleHelper" type="Node2D" parent="."]
position = Vector2( -1.19209e-07, 1.85992e-09 )
rotation = -0.785398
script = ExtResource( 4 )
debug = true

[node name="Position2D" type="Position2D" parent="PlayerAngleHelper"]
position = Vector2( 1.19209e-07, -94 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerAngleHelper"]
autoplay = "cycle"
anims/cycle = SubResource( 3 )

[node name="Timer" type="Timer" parent="PlayerAngleHelper"]
wait_time = 5.0
autostart = true

[node name="Playerlosetimer" type="Timer" parent="PlayerAngleHelper"]
one_shot = true

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
visible = false
shape = SubResource( 4 )

[node name="BulletShoot" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[connection signal="shoot" from="PlayerAngleHelper" to="." method="_on_PlayerAngleHelper_shoot"]
[connection signal="timeout" from="PlayerAngleHelper/Timer" to="PlayerAngleHelper" method="_on_Timer_timeout"]
[connection signal="timeout" from="PlayerAngleHelper/Playerlosetimer" to="PlayerAngleHelper" method="_on_Playerlosetimer_timeout"]
[connection signal="body_entered" from="PlayerDetector" to="PlayerDetector" method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="PlayerDetector" method="_on_PlayerDetector_body_exited"]
[connection signal="player_changed" from="PlayerDetector" to="PlayerAngleHelper" method="_on_PlayerDetector_player_changed"]
[connection signal="timeout" from="BulletShoot" to="." method="_on_BulletShoot_timeout"]
